--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -12,6 +12,9 @@
       rel="stylesheet"
       href="./node_modules/bootstrap/scss/bootstrap.scss"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
